--- a/package.json
+++ b/package.json
@@ -8,8 +8,37 @@
   "main": "index.js",
   "files": [],
   "dependencies": {
+    "remark-frontmatter": "^3.0.0",
+    "remark-gfm": "^1.0.0",
     "remark-lint-code-block-syntax": "^0.2.1",
+    "remark-lint-file-extension": "^1.0.5",
+    "remark-lint-final-definition": "^2.1.0",
+    "remark-lint-final-newline": "^1.0.5",
+    "remark-lint-first-heading-level": "^2.0.1",
+    "remark-lint-heading-increment": "^2.0.1",
+    "remark-lint-linebreak-style": "^2.0.1",
+    "remark-lint-no-consecutive-blank-lines": "^3.0.0",
+    "remark-lint-no-duplicate-defined-urls": "^1.0.1",
+    "remark-lint-no-duplicate-headings": "^2.0.1",
+    "remark-lint-no-emphasis-as-heading": "^2.0.1",
+    "remark-lint-no-empty-url": "^2.0.1",
+    "remark-lint-no-file-name-articles": "^1.0.5",
+    "remark-lint-no-file-name-consecutive-dashes": "^1.0.5",
+    "remark-lint-no-file-name-irregular-characters": "^1.0.5",
+    "remark-lint-no-file-name-mixed-case": "^1.0.5",
+    "remark-lint-no-file-name-outer-dashes": "^1.0.6",
+    "remark-lint-no-heading-like-paragraph": "^2.0.1",
     "remark-lint-no-heading-punctuation": "^2.0.1",
+    "remark-lint-no-missing-blank-lines": "^2.0.1",
+    "remark-lint-no-multiple-toplevel-headings": "^2.0.1",
+    "remark-lint-no-paragraph-content-indent": "^3.0.0",
+    "remark-lint-no-reference-like-url": "^2.0.1",
+    "remark-lint-no-shell-dollars": "^2.0.2",
+    "remark-lint-no-table-indentation": "^3.0.0",
+    "remark-lint-no-tabs": "^2.0.1",
+    "remark-lint-no-unneeded-full-reference-image": "^2.0.1",
+    "remark-lint-no-unneeded-full-reference-link": "^2.0.1",
+    "remark-lint-table-pipes": "^3.0.0",
     "remark-preset-lint-recommended": "^5.0.0",
     "remark-validate-links": "^10.0.4"
   },
@@ -69,6 +98,9 @@
     "extends": [
       "ybiquitous/node"
     ],
-    "reportUnusedDisableDirectives": true
+    "reportUnusedDisableDirectives": true,
+    "rules": {
+      "import/max-dependencies": "off"
+    }
   }
 }
