--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm --global install npm@latest
       - run: npm install
+      - run: npm run build
       - run: npm run lint
       - run: npm test
       - run: npm run release:dry-run
