--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
   "author": "Masafumi Koba",
   "license": "MIT",
   "repository": "ybiquitous/remark-preset-ybiquitous",
-  "main": "index.js",
-  "files": [],
+  "main": "./index.cjs",
+  "exports": {
+    "import": "./index.js",
+    "require": "./index.cjs"
+  },
+  "type": "module",
+  "files": [
+    "index.*js"
+  ],
   "keywords": [
     "remark",
     "remark-preset",
@@ -49,13 +56,14 @@
   },
   "devDependencies": {
     "eslint-config-ybiquitous": "^13.2.0",
+    "rollup": "^2.46.0",
     "ybiq": "^12.4.0"
   },
   "scripts": {
     "test": "remark .",
     "test:watch": "exit 1",
     "test:coverage": "exit 1",
-    "lint:js": "eslint .",
+    "lint:js": "eslint . --ignore-path .gitignore",
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:md": "remark . --frail",
     "lint:md:fix": "remark . --output",
@@ -68,7 +76,9 @@
     "prerelease": "git switch main && git pull && npm install && npm run clean && npm test && npm run lint && npm run clean",
     "release": "standard-version",
     "release:dry-run": "standard-version --dry-run",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prepublishOnly": "npm run build",
+    "build": "rollup index.js --file=index.cjs --format=cjs --no-esModule"
   },
   "lint-staged": {
     "*.{js,jsx,mjs,ts,tsx}": "eslint --fix",
@@ -83,7 +93,7 @@
   },
   "remarkConfig": {
     "plugins": [
-      "./index.js"
+      "."
     ]
   },
   "commitlint": {
