--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
     "prerelease": "git switch main && git pull && npm install && npm run clean && npm test && npm run lint && npm run clean",
     "release": "standard-version",
     "release:dry-run": "standard-version --dry-run",
-    "prepare": "husky install",
-    "prepublishOnly": "npm run build",
+    "prepare": "husky install && npm run build",
     "build": "rollup index.js --file=index.cjs --format=cjs --no-esModule"
   },
   "lint-staged": {
