--- a/package.json
+++ b/package.json
@@ -5,60 +5,52 @@
   "author": "Masafumi Koba",
   "license": "MIT",
   "repository": "ybiquitous/remark-preset-ybiquitous",
-  "main": "./index.cjs",
-  "exports": {
-    "import": "./index.js",
-    "require": "./index.cjs"
-  },
   "type": "module",
-  "files": [
-    "index.*js"
-  ],
+  "main": "index.js",
   "keywords": [
     "remark",
     "remark-preset",
     "markdown"
   ],
   "dependencies": {
-    "remark-frontmatter": "^3.0.0",
-    "remark-gfm": "^1.0.0",
+    "remark-frontmatter": "^4.0.0",
+    "remark-gfm": "^2.0.0",
     "remark-lint-code-block-syntax": "^0.2.1",
-    "remark-lint-file-extension": "^1.0.5",
-    "remark-lint-final-definition": "^2.1.0",
-    "remark-lint-final-newline": "^1.0.5",
-    "remark-lint-first-heading-level": "^2.0.1",
-    "remark-lint-heading-increment": "^2.0.1",
-    "remark-lint-linebreak-style": "^2.0.1",
-    "remark-lint-no-consecutive-blank-lines": "^3.0.0",
-    "remark-lint-no-duplicate-defined-urls": "^1.0.1",
-    "remark-lint-no-duplicate-headings": "^2.0.1",
-    "remark-lint-no-emphasis-as-heading": "^2.0.1",
-    "remark-lint-no-empty-url": "^2.0.1",
-    "remark-lint-no-file-name-articles": "^1.0.5",
-    "remark-lint-no-file-name-consecutive-dashes": "^1.0.5",
-    "remark-lint-no-file-name-irregular-characters": "^1.0.5",
-    "remark-lint-no-file-name-mixed-case": "^1.0.5",
-    "remark-lint-no-file-name-outer-dashes": "^1.0.6",
-    "remark-lint-no-heading-like-paragraph": "^2.0.1",
-    "remark-lint-no-heading-punctuation": "^2.0.1",
-    "remark-lint-no-missing-blank-lines": "^2.0.1",
-    "remark-lint-no-multiple-toplevel-headings": "^2.0.1",
-    "remark-lint-no-paragraph-content-indent": "^3.0.0",
-    "remark-lint-no-reference-like-url": "^2.0.1",
-    "remark-lint-no-shell-dollars": "^2.0.2",
-    "remark-lint-no-table-indentation": "^3.0.0",
-    "remark-lint-no-tabs": "^2.0.1",
-    "remark-lint-no-unneeded-full-reference-image": "^2.0.1",
-    "remark-lint-no-unneeded-full-reference-link": "^2.0.1",
-    "remark-lint-strikethrough-marker": "^1.0.0",
-    "remark-lint-table-pipes": "^3.0.0",
-    "remark-preset-lint-recommended": "^5.0.0",
-    "remark-validate-links": "^10.0.4"
+    "remark-lint-file-extension": "^2.0.0",
+    "remark-lint-final-definition": "^3.0.0",
+    "remark-lint-final-newline": "^2.0.0",
+    "remark-lint-first-heading-level": "^3.0.0",
+    "remark-lint-heading-increment": "^3.0.0",
+    "remark-lint-linebreak-style": "^3.0.0",
+    "remark-lint-no-consecutive-blank-lines": "^4.0.0",
+    "remark-lint-no-duplicate-defined-urls": "^2.0.0",
+    "remark-lint-no-duplicate-headings": "^3.0.0",
+    "remark-lint-no-emphasis-as-heading": "^3.0.0",
+    "remark-lint-no-empty-url": "^3.0.0",
+    "remark-lint-no-file-name-articles": "^2.0.0",
+    "remark-lint-no-file-name-consecutive-dashes": "^2.0.0",
+    "remark-lint-no-file-name-irregular-characters": "^2.0.0",
+    "remark-lint-no-file-name-mixed-case": "^2.0.0",
+    "remark-lint-no-file-name-outer-dashes": "^2.0.0",
+    "remark-lint-no-heading-like-paragraph": "^3.0.0",
+    "remark-lint-no-heading-punctuation": "^3.0.0",
+    "remark-lint-no-missing-blank-lines": "^3.0.0",
+    "remark-lint-no-multiple-toplevel-headings": "^3.0.0",
+    "remark-lint-no-paragraph-content-indent": "^4.0.0",
+    "remark-lint-no-reference-like-url": "^3.0.0",
+    "remark-lint-no-shell-dollars": "^3.0.0",
+    "remark-lint-no-table-indentation": "^4.0.0",
+    "remark-lint-no-tabs": "^3.0.0",
+    "remark-lint-no-unneeded-full-reference-image": "^3.0.0",
+    "remark-lint-no-unneeded-full-reference-link": "^3.0.0",
+    "remark-lint-strikethrough-marker": "^2.0.0",
+    "remark-lint-table-pipes": "^4.0.0",
+    "remark-preset-lint-recommended": "^6.0.0",
+    "remark-validate-links": "^11.0.0"
   },
   "devDependencies": {
     "eslint-config-ybiquitous": "^14.0.1",
-    "rollup": "^2.46.0",
-    "ybiq": "^13.0.0"
+    "ybiq": "^13.5.1"
   },
   "scripts": {
     "test": "remark .",
@@ -74,11 +66,10 @@
     "prettier:write": "npm run prettier -- --write",
     "format": "npm-run-all --print-label --parallel lint:*:fix prettier:write",
     "clean": "git clean -dx --force --exclude=node_modules --exclude=.husky",
-    "prerelease": "git switch main && git pull && npm ci && npm run clean && npm run build && npm test && npm run lint && npm run clean",
+    "prerelease": "git switch main && git pull && npm ci && npm run clean && npm test && npm run lint && npm run clean",
     "release": "standard-version",
     "release:dry-run": "standard-version --dry-run",
-    "prepare": "husky install && npm run build",
-    "build": "rollup index.js --file=index.cjs --format=cjs --no-esModule"
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.{js,jsx,mjs,ts,tsx}": "eslint --cache --fix",
@@ -93,7 +84,7 @@
   },
   "remarkConfig": {
     "plugins": [
-      "."
+      "./index.js"
     ]
   },
   "commitlint": {
@@ -118,6 +109,14 @@
       "dist",
       "tmp"
     ],
-    "reportUnusedDisableDirectives": true
+    "reportUnusedDisableDirectives": true,
+    "rules": {
+      "import/no-anonymous-default-export": [
+        "error",
+        {
+          "allowObject": true
+        }
+      ]
+    }
   }
 }
