--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "eslint-config-ybiquitous": "^14.0.1",
+    "remark-cli": "^10.0.0",
     "ybiq": "^13.5.1"
   },
   "scripts": {
