--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "remark-preset",
     "markdown"
   ],
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+  },
   "dependencies": {
     "remark-frontmatter": "^4.0.0",
     "remark-gfm": "^2.0.0",
