--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "test": "remark .",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "exit 1",
-    "lint:js": "eslint --cache --ignore-path .gitignore .",
+    "lint:js": "eslint --cache --ext=js,jsx,cjs,mjs,ts,tsx .",
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:md": "remark . --frail",
     "lint:md:fix": "remark . --output",
@@ -79,7 +79,7 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,jsx,mjs,ts,tsx}": "eslint --cache --fix",
+    "*.{js,jsx,cjs,mjs,ts,tsx}": "eslint --cache --fix",
     "!(*.snap)": "prettier --write",
     "!(CHANGELOG).md": "remark --frail"
   },
