--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   },
   "scripts": {
     "test": "remark .",
-    "test:watch": "npm run test -- --watch",
+    "test:watch": "remark . --watch",
     "test:coverage": "exit 1",
     "lint:js": "eslint --cache --ext=js,jsx,cjs,mjs,ts,tsx .",
     "lint:js:fix": "npm run lint:js -- --fix",
