--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ybiq": "^14.0.1"
   },
   "scripts": {
+    "pretest": "npm run lint",
     "test": "remark .",
     "test:watch": "remark . --watch",
     "test:coverage": "exit 1",
@@ -67,13 +68,13 @@
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:md": "remark . --frail",
     "lint:md:fix": "remark . --output",
-    "lint": "npm-run-all --print-label --parallel lint:* prettier:check",
+    "lint:styles": "npm run prettier -- --check",
+    "lint:styles:fix": "npm run prettier -- --write",
+    "lint": "npm-run-all --print-label --parallel lint:*",
+    "format": "npm-run-all --print-label --parallel lint:*:fix",
     "prettier": "prettier --ignore-path .gitignore .",
-    "prettier:check": "npm run prettier -- --check",
-    "prettier:write": "npm run prettier -- --write",
-    "format": "npm-run-all --print-label --parallel lint:*:fix prettier:write",
     "clean": "git clean -dx --force --exclude=node_modules --exclude=.husky",
-    "prerelease": "git switch main && git pull && npm ci && npm run clean && npm test && npm run lint && npm run clean",
+    "prerelease": "git switch main && git pull && npm ci && npm run clean && npm test && npm run clean",
     "release": "standard-version",
     "release:dry-run": "standard-version --dry-run",
     "prepare": "husky install"
