--- a/.github/workflows/npm-audit-fix.yml
+++ b/.github/workflows/npm-audit-fix.yml
@@ -10,6 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ybiquitous/npm-audit-fix-action@v4
+      - uses: ybiquitous/npm-audit-fix-action@retry-sudo
         with:
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
