--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "lint:commit": "commitlint --from HEAD~10",
     "lint": "npm-run-all --print-label --silent --parallel lint:*",
     "format": "npm-run-all --print-label --silent --parallel lint:*:fix",
-    "prettier": "prettier --cache --ignore-path .gitignore .",
+    "prettier": "prettier --cache .",
     "clean": "git clean -dx --force --exclude=node_modules --exclude=.husky",
     "prerelease": "git switch main && git pull && npm ci && npm run clean && npm test && npm run clean",
     "release": "standard-version",
@@ -133,5 +133,8 @@
         }
       ]
     }
+  },
+  "publishConfig": {
+    "provenance": true
   }
 }
