chore: fix commitlint failure
Ref https://github.com/ybiquitous/remark-preset-ybiquitous/actions/runs/10658458167/job/29539535853

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     versioning-strategy: increase
     open-pull-requests-limit: 20
     groups:
-      development-dependencies:
+      dev-deps:
         dependency-type: development
         exclude-patterns: ["remark-*"]
   - package-ecosystem: github-actions
