--- a/package.json
+++ b/package.json
@@ -105,6 +105,11 @@
         1,
         "always",
         300
+      ],
+      "header-max-length": [
+        1,
+        "always",
+        120
       ]
     }
   },
