--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,13 +17,13 @@ jobs:
       fail-fast: false
       matrix:
         node-version: ["20", "22", "24"]
-    uses: ybiquitous/.github/.github/workflows/nodejs-test-reusable.yml@main
+    uses: ybiquitous/.github/.github/workflows/nodejs-test-reusable.yml@87de5ae43f03470d08d6d5d8fa1fb684947c173b # v2.2.1
     with:
       node-version: ${{ matrix.node-version }}
     permissions:
       contents: read
 
   lint:
-    uses: ybiquitous/.github/.github/workflows/nodejs-lint-reusable.yml@main
+    uses: ybiquitous/.github/.github/workflows/nodejs-lint-reusable.yml@87de5ae43f03470d08d6d5d8fa1fb684947c173b # v2.2.1
     permissions:
       contents: read
